Refactor account retrieval methods and enhance API endpoints for fetching accounts by ID and person ID